SONAR-5634 Fix facet list height to prevent flicker on loading

--- a/server/sonar-web/src/main/less/coding-rules.less
+++ b/server/sonar-web/src/main/less/coding-rules.less
@@ -3,10 +3,13 @@
 @import (reference) 'ui';
 @import (reference) 'navigator/config';
 
-@facetsHeight: 40px;
-
+@facetsHeight: 36px;
 
 .coding-rules-page {
+
+  .navigator-facets {
+    min-height: 3 * @facetsHeight;
+  }
 
   .navigator-results .spinner {
     margin: @navigatorPadding;
